--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-nova-transferencia (aoTransferir)="transferir($event)"></app-nova-transferencia>
+<app-nova-transferencia
+  (aoTransferir)="transferir($event)"
+></app-nova-transferencia>
+
+<p>Valor: {{ transferencia?.valor }}</p>
+<p>Destino: {{ transferencia?.destino }}</p>
+
