--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,8 @@
   (aoTransferir)="transferir($event)"
 ></app-nova-transferencia>
 
+<app-extrato></app-extrato>
+
 <p>Valor: {{ transferencia?.valor }}</p>
 <p>Destino: {{ transferencia?.destino }}</p>
 
